--- a/index.html
+++ b/index.html
@@ -10,6 +10,32 @@
   <link rel="stylesheet" href="styles/index.css">
 </head>
 <body>
-  <a href=""></a>
+  <header class="container">
+    <nav id="primary" class=" grid grid-flow-col">
+<div>
+  <img src="assets/icons/List.svg" alt="Itens de Menu">
+  <strong>Menu</strong>
+</div>
+<div>
+  <img src="assets/Tech News.svg" alt="TEch New Logo">
+</div>
+<div>
+  <strong>Buscar</strong>
+  <img src="assets/icons/MagnifyingGlass.svg" alt="iCOne de buscar">
+</div>
+    </nav>
+
+    <nav id="secondary" class=" grid grid-flow-col">
+      
+<a href="#">Inteligência Artificial</a>
+<a href="#">Blockchain</a>
+<a href="#">Hologramas</a>
+<a href="#">Internet</a>
+<a href="#">Vestíveis</a>
+<a href="#">Realidade Aumentada</a>
+<a href="#">Realidade  Virtual</a>
+
+    </nav>
+  </header>
 </body>
 </html>
